# liverquant

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
example/: gtex_liver_steatosis_dataset.csv
src/liverquant/: __init__.py  colorutil.py  liverquant.py  slidepatch.py
